css/style.css
/* ... */
.popnavlist {
  list-style: none;
  padding-top: 1.5625rem;
}

.popnavlist > li {
  padding-bottom: 1.25rem;
}

.popnavlist > li > a {
  color: #cdcfcf;
  font-size: 1.875rem;
  text-decoration: none;
}

.popnavlist > li > a:hover {
  text-decoration: underline;
}

button:hover {
  opacity: 0.6;
}

.homefooter {
  display: none;
}

/* container desktop version applied 768px and above */
@media screen and (min-width: 768px) {
  body {
    max-width: 100%;
    flex-direction: column;
  }

  .barbutton {
    display: none;
  }

  nav {
    display: flex;
    flex-direction: column;
    overflow: hidden;
    position: fixed;
    top: 0;
  }

  .maincontainer {
    margin-top: 12.5rem;
  }

  .linkto {
    display: flex;
    flex-direction: row;
    background-color: #272a31;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    justify-content: flex-end;
    padding-right: 6.25rem;
  }

  .linkto > li {
    list-style: none;
    padding-left: 0.625rem;
  }

  .linkto > li > a {
    text-decoration: none;
    color: white;
  }

  .navlist > li > a {
    text-decoration: none;
    color: #5d5d5d;
  }

  .navlist > .aievent > a {
    border: 2px solid #ec5242;
    padding: 0.3125rem;
    color: #ec5242;
  }

  .navlist > .about > a {
    color: #ec5242;
  }

  .linkto > li > a:hover {
    text-decoration: underline;
  }

  .navwrapper {
    padding-left: 5.3125rem;
    display: flex;
    flex-direction: row;
    background-color: white;
    max-height: 4.0625rem;
  }

  .logolink {
    display: flex;
    min-width: 16%;
    max-width: 16%;
    padding-top: 0.3125rem;
    padding-bottom: 0.3125rem;
  }

  .headerlogo {
    display: inline-block;
    width: 90%;
    height: 90%;
  }

  .navlist {
    display: flex;
    flex-direction: row;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    padding-right: 100px;
    margin-left: auto;
  }

  .navlist > li {
    list-style: none;
    padding-left: 30px;
  }

  .navlist > li > a:hover {
    text-decoration: underline;
  }

  .eventsection {
    padding-left: 6.25rem;
  }

  .subtitle {
    font-size: 2.5rem;
  }

  .title {
    font-size: 3.5rem;
    width: 900px;
    line-height: 3.5rem;
  }

  .eventdetail {
    font-size: 1.5rem;
    width: 800px;
  }

  .eventdate,
  .mainprogram {
    font-size: 2.5rem;
  }

  .eventlocation {
    font-size: 1.5rem;
  }

  .programposition {
    flex-direction: row;
    margin-top: 3.125rem;
    margin-bottom: 3.125rem;
    justify-content: center;
  }

  .programposition > div {
    flex-direction: column;
    margin-left: 0.3125rem;
    width: 13%;
  }

  .programposition > div > img {
    height: 40%;
    width: 40%;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 0.625rem;
  }

  .programposition > div > h3 {
    font-size: 1.3rem;
    text-align: center;
    color: #ec5242;
    margin-bottom: 0;
    padding-bottom: 0;
  }

  .programposition > div > p {
    font-size: 1rem;
    text-align: center;
  }

  .desktopprogram {
    display: block;
    text-align: center;
    color: #cdcfcf;
    font-size: 1.3rem;
  }

  .desktopprogram :hover {
    text-decoration: underline;
  }

  .programs {
    padding-bottom: 100px;
  }

  .speakertitle {
    font-size: 2.5rem;
  }

  .speakerposition {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .speakerposition > div {
    width: 85%;
  }

  .speakerposition > div > div {
    width: 95%;
  }

  .speakerposition > div > img {
    height: 80%;
    width: 35%;
  }

  .speakerposition > div > div > h3 {
    font-size: 1.3rem;
  }

  .speakerposition > div > div > h4 {
    font-size: 1rem;
  }

  .speakerposition > div > div > p {
    font-size: 0.8rem;
  }

  .speakerbutton {
    display: none;
  }

  .sponsor > h2 {
    font-size: 2.5rem;
  }

  .sponsor > .sponsorimg > img {
    width: 15%;
  }

  .sponsor > .sponsorimg > img:hover {
    width: 16%;
  }

  .imglogo {
    width: 50%;
    height: 110%;
  }

  .footerdetail {
    font-size: 1.2rem;
  }

  .homefooter {
    display: block;
    padding-top: 1.875rem;
    padding-bottom: 1.875rem;
  }

  /* footer desktop version start here  */
  .aboutsubtitle {
    text-align: center;
  }

  .abouttitle {
    display: flex;
    text-align: center;
    align-self: center;
    margin-left: auto;
    margin-right: auto;
  }

  .abouteventdetail {
    display: flex;
    text-align: center;
    align-items: center;
    width: 900px;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.2rem;
  }

  .aboutemailus {
    font-size: 1.2rem;
  }

  .aboutcontact {
    font-size: 1.2rem;
  }

  .aboutlodgodetail > h2 {
    font-size: 2.5rem;
  }

  .logomobiledetial {
    display: none;
  }

  .logodektopdetail {
    display: block;
    width: 50rem;
    margin-bottom: 3.125rem;
    font-size: 1.2rem;
    text-align: center;
  }

  .logoimg {
    width: 40%;
  }

  .previoustitle {
    font-size: 2.5rem;
  }

  .previousdetail {
    text-align: center;
    font-size: 1.2rem;
    margin-bottom: 50px;
  }

  .previousposition {
    flex-direction: row;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
  }

  .imagewrapper {
    position: relative;
    background-color: #ec5242;
    width: 90%;
    margin-left: auto;
    margin-right: auto;
  }

  .aboutsponsor {
    display: none;
  }

  .aboutfooter {
    background-color: #272a31;
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-top: 1.875rem;
    padding-bottom: 1.875rem;
    margin-left: 0;
    margin-right: 0;
  }

  .footerlogo {
    width: 20%;
    height: 110%;
  }

  .aboutfooterdetail {
    font-size: 1.2rem;
    color: #cdcfcf;
  }

  .homesponsor {
    display: block;
  }

  .joinbutton {
    display: none;
  }
}

